--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
     "react-native": "0.64.3",
+    "react-native-calendars": "^1.1274.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-paper": "^4.11.1",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
