--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1274.0",
     "react-native-elements": "^3.4.2",
     "react-native-modal": "^13.0.0",
