--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1274.0",
+    "react-native-dynamic-search-bar": "github:WrathChaos/react-native-dynamic-search-bar",
+    "react-native-dynamic-vector-icons": "github:WrathChaos/react-native-dynamic-vector-icons",
     "react-native-elements": "^3.4.2",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-animated-spinkit": "^1.4.1",
+    "@freakycoder/react-native-bounceable": ">= 0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
