--- a/package.json
+++ b/package.json
@@ -8,27 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "4.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
-    "react-calendar": "^3.5.0",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.3.1",
+    "react-content-loader": "^6.1.0",
     "react-native": "0.64.3",
-    "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1274.0",
-    "react-native-dynamic-search-bar": "github:WrathChaos/react-native-dynamic-search-bar",
-    "react-native-dynamic-vector-icons": "github:WrathChaos/react-native-dynamic-vector-icons",
     "react-native-elements": "^3.4.2",
-    "react-native-modal": "^13.0.0",
-    "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-native-animated-spinkit": "^1.4.1",
-    "@freakycoder/react-native-bounceable": ">= 0.2.2"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
